tests/fixtures/invalid/str_notin_bool.py
# Cannot use 'not in' with Str and Bool
x: bool = "hello" not in True
